# doppelganger-detector

./: .gitignore  README.md  actors.csv  app.py  doppelganger_datasets.py  filenames.csv  files_train.csv  files_val.csv  google_image_scraper.py  image_judge.py  metrics.py  pyproject.toml  retriever.py  scrape.py  trainer.py  trainer_launcher.py  trainer_launcher_full.py  trainer_launcher_head.py  triplet_dataset.py  triplets_train.csv  triplets_val.csv
