[tool.poetry]
name = "doppelganger-detector"
version = "0.1.0"
description = ""
authors = ["Justin Pyron <justinpyron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
pandas = "^2.2.3"
torch = "^2.5.1"
matplotlib = "^3.10.0"
jupyterlab = "^4.3.4"
torchvision = "^0.20.1"
opencv-python = "^4.10.0.84"
pre-commit = "^4.1.0"
scikit-learn = "^1.6.1"
transformers = "^4.48.1"
streamlit = "^1.41.1"
selenium = "^4.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
